@@ -1,6 +1,9 @@
 #!/bin/sh
 
-aclocal
+ln -snf $(locate gettext.h) gettext.h
+
+autopoint -f
+aclocal -I m4
 autoheader
 libtoolize --automake --copy
 automake --add-missing --foreign
